# Energy-Advisor-Project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  eval_report_full.json  eval_report_full_no_judge.json  eval_report_quick_no_judge.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  docker.yml  drift.yml  eval.yml
.streamlit/: config.toml
app/: streamlit_app.py
app/components/: charts.py  chat.py  operations.py
data/documents/: tip_solar_optimization.txt
deploy/aws/: README.md  apprunner.env.example
deploy/streamlit/: README.md
docs/: BACKLOG_MVP_AUDITAVEL.md  CODE_REVIEW.md  EXERCISES.md  LEARNING_PATH.md  ONBOARDING_JUNIOR_AI_ENGINEER.md  PRODUCT_NOTES.md  dashboard_improvements.md  interview_prep.md  interview_qa.md  interview_technical_qa.md  mlops_implementation_notes.md  mlops_observability_backlog.md  project_analysis_refactor_plan.md  project_backlog.md  project_overview.md
docs/adr/: README.md  adr-001-explicit-langgraph-graph.md  adr-002-aggregation-inside-tools.md  adr-003-deterministic-guardrails-audit-block.md  adr-004-two-dimensional-evaluation.md  adr-005-sqlite-with-migration-path.md  adr-006-real-token-accounting-and-budget.md  adr-007-streaming-under-same-controls.md  adr-008-conversation-memory-checkpointer.md  adr-009-no-prices-in-prompt.md  adr-010-topicality-enforcement.md
docs/obsidian/: 00_Index.md  01_Architecture.md  02_Config_and_Settings.md  03_Agent_and_Prompts.md  04_Tools.md  05_Services.md  06_Data_Layer.md  07_RAG_Pipeline.md  08_Bootstrap.md  09_Testing.md  10_Decisions.md  11_Sugestions.md
ecohome_solution/: .env.example  01_db_setup.ipynb  02_rag_setup.ipynb  03_run_and_evaluate.ipynb  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
ecohome_solution/app/: streamlit_app.py
ecohome_solution/energy_advisor/: __init__.py  agent.py  config.py  prompts.py  schemas.py
ecohome_solution/models/: __init__.py
ecohome_solution/tests/: conftest.py  test_config.py  test_database.py  test_forecasting.py  test_pricing.py  test_retrieval.py  test_savings.py  test_tools_energy_data.py
energy_advisor/: __init__.py  agent.py  config.py  contract.py  guardrails.py  logging.py  observability.py  profile.py  prompts.py  schemas.py
interview/: CAR_5MIN.md  PRODUCT_ASSESSMENT_AND_EXPLAINER.md
migrations/: env.py
tests/: conftest.py  test_agent.py  test_api.py  test_config.py  test_contract.py  test_drift_monitor.py  test_drift_report.py  test_eval_scenarios.py  test_evaluation_harness.py  test_forecasting.py  test_guardrails.py  test_migrations.py  test_observability.py  test_operations_tab.py  test_optimizer.py  test_pricing.py  test_prompts.py  test_retrieval.py  test_savings.py  test_tools_energy_data.py  test_trace_report.py  test_usage_forecasting.py  test_usage_forecasting_ml.py
(+50 files in other folders)
