[project]
name = "energy-advisor"
version = "0.1.0"
description = "EcoHome Energy Advisor — AI-powered smart-home energy optimization agent"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "certifi>=2024.8.30",
    "chromadb>=0.5.0",
    "langchain>=0.3.0",
    "langchain-chroma>=0.1.4",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.2.0",
    "loguru>=0.7.2",
    "numpy>=1.26.4",
    "openai>=1.40.0",
    "pandas>=2.2.3",
    "plotly>=6.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.4.0",
    "sqlalchemy>=2.0.23",
    "streamlit>=1.57.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "mlflow>=2.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["energy_advisor"]
omit = [
    "energy_advisor/bootstrap/*",
    "energy_advisor/evaluation/*",
    "energy_advisor/agent.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 70
